moonlight-rewrite/test/fixtures/CompileFail/CheckedRawRewriteRuleConstructor.hs
module CheckedRawRewriteRuleConstructor where

import Moonlight.Rewrite.System (CheckedRawRewriteRule (..))

constructorEscapes CheckedRawRewriteRule {} = ()
